[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/lobby.gd" type="Script" id=1]
[ext_resource path="res://scripts/editor.gd" type="Script" id=2]
[ext_resource path="res://assets/images/Hexagon_Tiles/Grass.png" type="Texture" id=3]
[ext_resource path="res://assets/images/Hexagon_Tiles/Forest.png" type="Texture" id=4]
[ext_resource path="res://assets/images/Hexagon_Tiles/Stones.png" type="Texture" id=5]
[ext_resource path="res://assets/images/Hexagon_Tiles/Sand.png" type="Texture" id=6]
[ext_resource path="res://assets/images/Hexagon_Tiles/Water.png" type="Texture" id=7]
[ext_resource path="res://assets/images/Hexagon_Tiles/Lava.png" type="Texture" id=8]
[ext_resource path="res://assets/images/Hexagon_Tiles/Road.png" type="Texture" id=9]
[ext_resource path="res://assets/images/Hexagon_Tiles/Village.png" type="Texture" id=10]
[ext_resource path="res://assets/images/Hexagon_Tiles/Haunted.png" type="Texture" id=11]

[node name="lobby" type="Control"]

anchor_right = 1
anchor_bottom = 1
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( 1 )

[node name="players" type="Panel" parent="."]

visible = false
margin_left = 393.0
margin_top = 113.0
margin_right = 645.0
margin_bottom = 468.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="label" type="Label" parent="players"]

margin_left = 26.0
margin_top = 18.0
margin_right = 142.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Awaiting Players..."
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="start" type="Button" parent="players"]

margin_left = 68.0
margin_top = 307.0
margin_right = 193.0
margin_bottom = 336.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "START!"
flat = false

[node name="list" type="ItemList" parent="players"]

margin_left = 25.0
margin_top = 37.0
margin_right = 229.0
margin_bottom = 296.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
items = [  ]
select_mode = 0
icon_mode = 1

[node name="connect" type="Panel" parent="."]

margin_left = 370.0
margin_top = 157.0
margin_right = 647.0
margin_bottom = 349.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="name_label" type="Label" parent="connect"]

margin_left = 14.0
margin_top = 11.0
margin_right = 56.0
margin_bottom = 25.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Name:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="name" type="LineEdit" parent="connect"]

margin_left = 17.0
margin_top = 30.0
margin_right = 173.0
margin_bottom = 54.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "The Warrior"
expand_to_len = false
focus_mode = 2
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65

[node name="ip_label" type="Label" parent="connect"]

margin_left = 15.0
margin_top = 66.0
margin_right = 57.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 0
text = "IP:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ip" type="LineEdit" parent="connect"]

margin_left = 17.0
margin_top = 85.0
margin_right = 173.0
margin_bottom = 109.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "127.0.0.1"
expand_to_len = false
focus_mode = 2
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65

[node name="host" type="Button" parent="connect"]

margin_left = 181.0
margin_top = 31.0
margin_right = 246.0
margin_bottom = 51.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Host"
flat = false

[node name="join" type="Button" parent="connect"]

margin_left = 181.0
margin_top = 87.0
margin_right = 246.0
margin_bottom = 107.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Join"
flat = false

[node name="error_label" type="Label" parent="connect"]

margin_left = 15.0
margin_top = 125.0
margin_right = 257.0
margin_bottom = 139.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 0
custom_colors/font_color = Color( 0.820312, 0.291595, 0.291595, 1 )
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="deckeditor" type="Button" parent="connect"]

margin_left = 97.0
margin_top = 144.0
margin_right = 169.0
margin_bottom = 164.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Edit Deck"
flat = false

[node name="error" type="AcceptDialog" parent="."]

visible = false
margin_right = 55.0
margin_bottom = 58.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
popup_exclusive = false
window_title = "Alert!"
resizable = false
dialog_hide_on_ok = true

[node name="editor" type="Panel" parent="."]

margin_right = 1025.0
margin_bottom = 599.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
_sections_unfolded = [ "Size Flags" ]

[node name="Panel_Deck" type="PanelContainer" parent="editor"]

margin_left = 145.0
margin_top = 143.0
margin_right = 284.0
margin_bottom = 448.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Box_Deck" type="VBoxContainer" parent="editor/Panel_Deck"]

margin_left = 7.0
margin_top = 7.0
margin_right = 132.0
margin_bottom = 298.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="cardlist" type="ItemList" parent="editor"]

margin_left = 443.0
margin_top = 119.0
margin_right = 639.0
margin_bottom = 478.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
items = [ "Card_Grass", ExtResource( 3 ), false, "Card_Forest", ExtResource( 4 ), false, "Card_Stones", ExtResource( 5 ), false, "Card_Sand", ExtResource( 6 ), false, "Item 4", ExtResource( 7 ), false, "Card_Lava", ExtResource( 8 ), false, "Item 6", ExtResource( 9 ), false, "Card_Village", ExtResource( 10 ), false, "Item 8", ExtResource( 11 ), false ]
select_mode = 0
icon_mode = 1
icon_scale = 0.5
_sections_unfolded = [ "Columns", "Icon" ]

[node name="deckname" type="Label" parent="editor"]

margin_left = 202.0
margin_top = 84.0
margin_right = 282.0
margin_bottom = 99.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
text = "current deck"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="back_to_menu" type="Button" parent="editor"]

margin_left = 749.0
margin_top = 493.0
margin_right = 900.0
margin_bottom = 542.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Save Deck"
flat = false

[connection signal="pressed" from="players/start" to="." method="_on_start_pressed"]

[connection signal="pressed" from="connect/host" to="." method="_on_host_pressed"]

[connection signal="pressed" from="connect/join" to="." method="_on_join_pressed"]

[connection signal="pressed" from="connect/deckeditor" to="." method="_on_deckeditor_pressed"]

[connection signal="item_activated" from="editor/cardlist" to="editor" method="_on_cardlist_item_activated"]

[connection signal="pressed" from="editor/back_to_menu" to="." method="_on_back_to_menu_pressed"]


